objects/Account_Forecast__c.object
<CustomObject>
    <fields>
        <fullName>Account_Number__c</fullName>
        <label>Account Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Forecasts</relationshipLabel>
        <relationshipName>Account_Forecasts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BU__c</fullName>
        <formula>Overall_Forecast__r.Sales_Hierarchy__r.BU__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GAM_Code__c</fullName>
        <formula>Account__r.GAMCD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GAM Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JDA_Account_Number__c</fullName>
        <formula>RIGHT(  Account__r.AccountNumber ,8)&amp;&quot;&quot;&amp; LEFT(Account__r.AccountNumber ,4)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>JDA Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Month_0__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Month 0</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Month_10__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Month 10</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Month_11__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Month 11</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Overall_Forecast__c</fullName>
        <label>Overall Forecast</label>
        <referenceTo>Overall_Forecast__c</referenceTo>
        <relationshipLabel>Account Forecasts</relationshipLabel>
        <relationshipName>Account_Forecasts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Previous_Month_1__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Month-1</description>
        <label>Previous Month 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Previous_Month_2__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Month-2</description>
        <label>Previous Month 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Previous_Month_3__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Month-3</description>
        <label>Previous Month 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sales_Terri__c</fullName>
        <formula>Account__r.SALES_TERRITORY_CDE__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Territory</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sum_of_Total_Months__c</fullName>
        <formula>Month_0__c + Month_1__c+ Month_2__c +Month_3__c+ Month_4__c +Month_5__c +Month_6__c +Month_7__c+Month_8__c + Month_9__c +Month_10__c +Month_11__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sum of Total Months</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Account Forecast</label>
    <nameField>
        <displayFormat>Forecast-{0000000000}</displayFormat>
        <label>Account Forecast</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Forecasts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>GAM_Code_must_be_same</fullName>
        <active>true</active>
        <errorConditionFormula>Account__r.GAMCD__c !=  Overall_Forecast__r.GAM_Code__c</errorConditionFormula>
        <errorMessage>You are selected the account not valid for this GAM</errorMessage>
    </validationRules>
</CustomObject>